<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_light_transparent">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="79dp"
        android:layout_height="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/usernameItem"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/usernameItem"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/nameItem"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toTopOf="@+id/nameItem"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bioItem"
        app:layout_constraintTop_toTopOf="@+id/bioItem"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bioItem"
        style="@style/CardView.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/bioItem"
        app:layout_constraintEnd_toEndOf="@+id/nameItem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameItem"
        app:layout_constraintTop_toBottomOf="@+id/nameItem" />

    <TextView
        android:id="@+id/repoCount"
        android:layout_width="64dp"
        android:layout_height="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/repoCountItem"
        app:layout_constraintEnd_toEndOf="@+id/bio"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/repoCountItem"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/usernameItem"
        style="@style/CardView.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/usernameItem"
        app:layout_constraintEnd_toStartOf="@+id/avatar"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameItem"
        style="@style/CardView.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/nameItem"
        app:layout_constraintEnd_toEndOf="@+id/usernameItem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameItem"
        app:layout_constraintTop_toBottomOf="@+id/usernameItem" />


    <TextView
        android:id="@+id/repoCountItem"
        style="@style/CardView.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/repoCountItem"
        app:layout_constraintEnd_toEndOf="@+id/bioItem"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="@+id/bioItem"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <TextView
        android:id="@+id/locationItem"
        style="@style/CardView.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/locationItem"
        app:layout_constraintEnd_toEndOf="@+id/repoCountItem"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="@+id/repoCountItem"
        app:layout_constraintTop_toBottomOf="@+id/repoCount" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/repoCount"
        app:layout_constraintTop_toTopOf="@+id/locationItem" />

</androidx.constraintlayout.widget.ConstraintLayout>